@@ -6,6 +6,8 @@ Fix: TabPanel was sending redundant "tabchange" event to server when initially i
 Fix: column filters were making GridPanel crash when the column editor was set to "textarea".
 Fix: dongling comma and "delete" object properties caused problems in IE and Safari.
 Fix: a stand-alone TabPanel would not render the active item.
+New: BasicApp: masquerading as "World". In this mode all the "touched" persistent preferences will be overwritten for all roles and users.
+Impr: configuration panel's header now shows the underlying model's name for convenience.
 
 v0.5.0
 2009-09-06
